feat: :sparkles: added shift template
